--- a/style.css
+++ b/style.css
@@ -6,19 +6,24 @@
     text-decoration: none;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+
 }
 html {
     height: 100%;
 }
 body {
+    position: relative;
     min-height: 100%;
     background-color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .calculator {
-    background-color: rgb(86, 86, 81);
+    background-color: rgb(220, 181, 181);
+
     height: 550px;
     width: 350px;
     padding: 15px;
@@ -27,25 +32,61 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    box-shadow: inset 1px 5px 10px;
+    /* box-shadow: inset 1px 5px 10px; */
 }
 .screen {
-    background-color: rgb(0, 0, 0);
-    font-size: 1.7rem;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    color: rgb(33, 138, 9);
+    background-color: rgb(60, 55, 72);
+    font-size: 2rem;
+
     padding: 10px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     grid-area: 1 / 1 / 3 / 5;
+    
 }
+
+#input{
+    color: rgba(215, 215, 215,0.7);
+
+    overflow-y: scroll;
+    font-weight: 400;
+}
+#input::-webkit-scrollbar{
+    height: 0;
+    width: 0;
+}
+#output{
+    overflow-y: scroll;
+}
+#output::-webkit-scrollbar{
+    height: 0;
+    width: 0;
+}
+#output{
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+
+}
+.more button {
+background-color: rgb(229, 130, 130);
+color: rgb(137, 52, 52);
+}
+
 .screen div {
     height: 50%;
     display: flex;
     align-items: center;
+}
+[data-eq]{
+    background-color: rgb(177, 26, 26);
+    color: white;
+    font-size: 3rem;
+    box-shadow: rgb(6, 0, 0) 0px -4px 4px inset, 0px -4px 4px rgba(82, 35, 35, 0.2) ;
+
+    
 }
 
 .numbers {
@@ -59,6 +100,9 @@ body {
     gap: 5px;
     grid-area: 4 / 4 / 9 / 5;
 }
+.operators button {
+    background-color: rgb(241, 164, 91);
+}
 .more {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -66,19 +110,17 @@ body {
     grid-area: 3 / 1 / 4 / 5;
 }
 button {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    font-size: 1.5rem;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
     font-weight: 300;
     border-radius: 10px;
-    box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.3);
+box-shadow: 0px -4px 4px inset, 0px -4px 4px rgba(0, 0, 0, 0.2) ;
     border: none;
     transition-duration: 0.3s;
 }
 
 button:active {
-    transform: scale(0.9);
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    transform: scale(0.95);
 }
 
 @media (max-width: 500px) {
