--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
     text-decoration: none;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
-
+    font-family: "Roboto", sans-serif;
 }
 html {
     height: 100%;
@@ -44,35 +43,33 @@ body {
     flex-direction: column;
     justify-content: space-between;
     grid-area: 1 / 1 / 3 / 5;
-    
 }
 
-#input{
-    color: rgba(215, 215, 215,0.7);
+#input {
+    color: rgba(215, 215, 215, 0.7);
 
     overflow-y: scroll;
     font-weight: 400;
 }
-#input::-webkit-scrollbar{
+#input::-webkit-scrollbar {
     height: 0;
     width: 0;
 }
-#output{
+#output {
     overflow-y: scroll;
 }
-#output::-webkit-scrollbar{
+#output::-webkit-scrollbar {
     height: 0;
     width: 0;
 }
-#output{
+#output {
     font-size: 2.5rem;
     font-weight: 700;
     color: rgb(255, 255, 255);
-
 }
 .more button {
-background-color: rgb(229, 130, 130);
-color: rgb(137, 52, 52);
+    background-color: rgb(229, 130, 130);
+    color: rgb(137, 52, 52);
 }
 
 .screen div {
@@ -80,13 +77,12 @@ color: rgb(137, 52, 52);
     display: flex;
     align-items: center;
 }
-[data-eq]{
+[data-eq] {
     background-color: rgb(177, 26, 26);
     color: white;
     font-size: 3rem;
-    box-shadow: rgb(6, 0, 0) 0px -4px 4px inset, 0px -4px 4px rgba(82, 35, 35, 0.2) ;
-
-    
+    box-shadow: rgb(6, 0, 0) 0px -4px 4px inset,
+        0px -4px 4px rgba(82, 35, 35, 0.2);
 }
 
 .numbers {
@@ -110,11 +106,11 @@ color: rgb(137, 52, 52);
     grid-area: 3 / 1 / 4 / 5;
 }
 button {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 2rem;
     font-weight: 300;
     border-radius: 10px;
-box-shadow: 0px -4px 4px inset, 0px -4px 4px rgba(0, 0, 0, 0.2) ;
+    box-shadow: 0px -4px 4px inset, 0px -4px 4px rgba(0, 0, 0, 0.2);
     border: none;
     transition-duration: 0.3s;
 }
