--- a/style.css
+++ b/style.css
@@ -81,8 +81,7 @@ body {
     background-color: rgb(177, 26, 26);
     color: white;
     font-size: 3rem;
-    box-shadow: rgb(6, 0, 0) 0px -4px 4px inset,
-        0px -4px 4px rgba(82, 35, 35, 0.2);
+
 }
 
 .numbers {
@@ -110,7 +109,7 @@ button {
     font-size: 2rem;
     font-weight: 300;
     border-radius: 10px;
-    box-shadow: 0px -4px 4px inset, 0px 3px 4px rgba(0, 0, 0, 0.2);
+    box-shadow:rgba(0, 0, 0, 0.466) 0px -4px 4px inset, 0px 3px 4px rgba(0, 0, 0, 0.2);
     border: none;
     transition-duration: 0.3s;
 }
