--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 .screen {
     background-color: rgb(60, 55, 72);
     font-size: 2rem;
-
+box-shadow: 0px 5px 10px inset;
     padding: 10px;
     border-radius: 10px;
     display: flex;
@@ -65,7 +65,7 @@ body {
 #output {
     font-size: 2.5rem;
     font-weight: 700;
-    color: rgb(255, 255, 255);
+    color: rgb(227, 227, 227);
 }
 .more button {
     background-color: rgb(229, 130, 130);
