--- a/style.css
+++ b/style.css
@@ -19,10 +19,8 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .calculator {
     background-color: rgb(220, 181, 181);
-
     height: 550px;
     width: 350px;
     padding: 15px;
@@ -31,12 +29,11 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    /* box-shadow: inset 1px 5px 10px; */
 }
 .screen {
     background-color: rgb(60, 55, 72);
     font-size: 2rem;
-box-shadow: 0px 5px 10px inset;
+    box-shadow: 0px 5px 10px inset;
     padding: 10px;
     border-radius: 10px;
     display: flex;
@@ -44,34 +41,27 @@ box-shadow: 0px 5px 10px inset;
     justify-content: space-between;
     grid-area: 1 / 1 / 3 / 5;
 }
-
 #input {
     color: rgba(215, 215, 215, 0.7);
-
     overflow-y: scroll;
     font-weight: 400;
+    white-space: nowrap;
+    overflow-x: auto;
 }
-#input::-webkit-scrollbar {
+.screen div::-webkit-scrollbar {
     height: 0;
     width: 0;
 }
 #output {
     overflow-y: scroll;
-}
-#output::-webkit-scrollbar {
-    height: 0;
-    width: 0;
-}
-#output {
     font-size: 2.5rem;
     font-weight: 700;
     color: rgb(227, 227, 227);
 }
-.more button {
+#clear button {
     background-color: rgb(229, 130, 130);
     color: rgb(137, 52, 52);
 }
-
 .screen div {
     height: 50%;
     display: flex;
@@ -81,24 +71,22 @@ box-shadow: 0px 5px 10px inset;
     background-color: rgb(177, 26, 26);
     color: white;
     font-size: 3rem;
-
 }
-
-.numbers {
+#numbers {
     grid-area: 4 / 1 / 9 / 4;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
 }
-.operators {
+#operators {
     display: grid;
     gap: 5px;
     grid-area: 4 / 4 / 9 / 5;
 }
-.operators button {
+#operators button {
     background-color: rgb(241, 164, 91);
 }
-.more {
+#clear {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
@@ -109,7 +97,8 @@ button {
     font-size: 2rem;
     font-weight: 300;
     border-radius: 10px;
-    box-shadow:rgba(0, 0, 0, 0.466) 0px -4px 4px inset, 0px 3px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: rgba(0, 0, 0, 0.466) 0px -4px 4px inset,
+        0px 3px 4px rgba(0, 0, 0, 0.2);
     border: none;
     transition-duration: 0.3s;
 }
@@ -117,7 +106,6 @@ button {
 button:active {
     transform: scale(0.95);
 }
-
 @media (max-width: 500px) {
     body {
         height: 100%;
