--- a/style.css
+++ b/style.css
@@ -12,12 +12,10 @@ html {
     height: 100%;
 }
 body {
-    position: relative;
-    min-height: 100%;
+    height: 100%;
     background-color: rgb(0, 0, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
 }
 .calculator {
     background-color: rgb(220, 181, 181);
@@ -67,7 +65,7 @@ body {
     display: flex;
     align-items: center;
 }
-[data-eq] {
+[data-equal] {
     background-color: rgb(177, 26, 26);
     color: white;
     font-size: 3rem;
@@ -107,9 +105,6 @@ button:active {
     transform: scale(0.9);
 }
 @media (max-width: 500px) {
-    body {
-        height: 100%;
-    }
     .calculator {
         width: 100%;
         height: 100%;
